--- a/telegraf.conf
+++ b/telegraf.conf
@@ -1,5 +1,3 @@
-# Telegraf Configuration for NUS-SmartStop
-
 # --- Global Agent Configuration ---
 # This just tells Telegraf how often to run
 [agent]
@@ -12,7 +10,7 @@
   urls = ["http://127.0.0.1:8086"]
 
   # PASTE YOUR INFLUXDB API TOKEN HERE
-  token = ""
+  token = "redacted"
 
   # Your organization name
   organization = "NUS SmartStop"
@@ -33,5 +31,7 @@
   # Tells Telegraf the messages are in JSON format
   data_format = "json"
 
-  # This is the line that makes "deviceId" a filterable tag
-  tag_keys = ["deviceId"]
+  name_override = "smartstop"
+
+  # This is the line that makes "deviceId" and crowd level a filterable tag
+  tag_keys = ["deviceId", "crowd_level"]
