--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,16 @@ Pillow>=10.2.0
 numpy>=1.26.0
 torch==2.9.0+cpu
 torchvision==0.24.0+cpu
+pandas>=2.2.0
+influxdb-client>=1.35.0
+pytz>=2023.3
+# NOTE: XGBoost should be installed without dependencies to avoid forcing scipy.
+# Install sequence recommended by maintainers / your environment:
+#   rm -rf /tmp/pip-*  
+#   pip install --no-cache-dir 'xgboost==2.0.3' --no-deps
+#   pip install --no-cache-dir influxdb-client pandas joblib
+xgboost==2.0.3
+scikit-learn>=1.2.2
+matplotlib>=3.7.2
+seaborn>=0.13.2
+joblib>=1.2.0
